# Tradingview-Capture-Api

./: .dockerignore  .gitignore  Dockerfile  KOYEB_DEPLOY.md  README.md  api.py  app.json  app.py  buildpack.yml  captureutil.py  captureutil_puppeteer.js  config.py  database.py  koyeb.dockerfile  koyeb.toml  package-lock.json  package.json  pyproject.toml  requirements.txt  routes.py  start.sh  tradingview.py
static/css/: style.css
static/js/: api_tester.js
templates/: api_docs.html  index.html
