[project]
name = "repl-nix-workspace"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.11"
dependencies = [
    "flask>=3.1.1",
    "gunicorn>=23.0.0",
    "pillow>=11.2.1",
    "requests>=2.32.3",
    "selenium>=4.33.0",
    "urllib3>=2.4.0",
    "werkzeug>=3.1.3",
]
